--- a/app/views/admin/survey_comments/_search_form.html.erb
+++ b/app/views/admin/survey_comments/_search_form.html.erb
@@ -5,7 +5,7 @@
     <%= filter :user_survey_level_id, "Nivel", f: f, as: :select, collection: Level.all.map{|q| [q.display_name, q.id]} %>
     <%= filter :user_survey_group_id, "Grupo", f: f, as: :select, collection: Group.all.map{|q| [q.display_name, q.id]} %>
     <%= filter :user_survey_interval_id, "Intervalo", f: f, as: :select, collection: Interval.all.map{|q| [q.display_name, q.id]} %>
-    <%= filter :user_survey_subject_id, "Asignatura", f: f, as: :select, collection: UserType.all.map{|q| [q.display_name, q.id]} %>
+    <%= filter :user_survey_subject_codigo, "Asignatura", f: f %>
     <%= filter :user_survey_user_type_id, "Tipo de Usuario", f: f, as: :select, collection: UserType.all.map{|q| [q.display_name, q.id]} %>
   </fieldset>
   <div class="filter-actions">
