--- a/app/views/surveys/alumnos.html.erb
+++ b/app/views/surveys/alumnos.html.erb
@@ -18,7 +18,7 @@
   <li>Totalmente de acuerdo</li>
 </ol>
 <hr>
-<%= form_for(@survey) do |f| %>
+<%= form_for(SurveyResult.new) do |f| %>
   <ul class="accordion" data-accordion role="tablist">
     <% @user_surveys.each do |user_survey| %>
       <li class="accordion-navigation">
@@ -26,7 +26,7 @@
           <%= user_survey.subject.display_name %> - <%= user_survey.docente.try(:display_name) %>
         </a>
         <div id="panel<%= user_survey.id%>d" class="content active" role="tabpanel" aria-labelledby="panel<%= user_survey.id%>d-heading">
-          <%= render 'alumnos_detalles' %>
+          <%= render partial: 'alumnos_detalles', locals: {user_survey: user_survey} %>
         </div>
       </li>
     <% end %>
