--- a/app/views/user_mailer/password_email.html.erb
+++ b/app/views/user_mailer/password_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Contraseña para Evaluaciones ULSA</h1>
     <p>
-      Hola estudiante @user.nombre, tu contraseña para esta evaluacion
+      Hola estudiante <%= @user.nombre %>, tu contraseña para esta evaluacion
       es: <%= @user.password %>.<br>
     </p>
     <p>
